--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a href="#" class="nav-brand text-decoration-none text-white">
+                <span>Trixy Parra</span>
+            </a>
+            <!-- Toggle Button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="toggle-navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
+                <a href="#" class="nav-link text-white">Home</a>
+                <a href="#" class="nav-link text-white">About</a>
+                <a href="#" class="nav-link text-white">Projects</a>
+                <a href="#" class="nav-link text-white">Contact</a>
+            </div>
+        </div>
+    </nav>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
