--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MFW Final Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c8e18aa0a2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -28,6 +29,23 @@
         </div>
     </nav>
 
+    <!-- Footer -->
+    <footer class="container-fluid bg-dark text-white text-center py-5">
+        <p class="fw-bold">Let's Connect!</p>
+        <div class="d-flex justify-content-center align-items-center mb-3">
+            <a class="pe-3" href="https://instagram.com"><i class="fa-brands fa-instagram fa-lg"></i></a>
+            <a class="pe-3" href="https://twitter.com"><i class="fa-brands fa-twitter fa-lg"></i></a>
+            <a class="pe-3" href="https://www.snapchat.com"><i class="fa-brands fa-snapchat fa-lg"></i></a>
+            <a href="https://facebook.com"><i class="fa-brands fa-facebook-square fa-lg"></i></a> 
+        </div>
+        <div class="footer-nav mb-3">
+            <a class="footer-links text-white pe-3" href="index.html">Home</a></li>
+            <a class="footer-links text-white pe-3" href="#">About</a></li>
+            <a class="footer-links text-white pe-3" href="#">Projects</a></li>
+            <a class="footer-links text-white" href="#">Contact</a></li>
+          </div>
+        <p class="mb-0">&copy; 2022 | Trixy Parra</p> 
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
 </body>
