--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-transparent fixed-top">
         <div class="container-fluid">
             <a href="#" class="nav-brand text-decoration-none text-white">
                 <span>Trixy Parra</span>
@@ -29,8 +29,23 @@
         </div>
     </nav>
 
+    <!-- Header -->
+    <header>
+        <div class="container-fluid header">
+            <video autoplay loop muted>
+                <source src="video/ocean.mp4" type="video/mp4">
+            </video>
+            <div class="text-box container-fluid d-flex justify-content-center align-items-center">
+                <h1 class="text-white text-center">
+                    TRIXY<br>PARRA<br>
+                    <span class="small-text text-center d-none d-md-block">{My Journey in Tech}</span>
+                </h1>
+            </div>
+        </div>
+    </header>
+
     <!-- Footer -->
-    <footer class="container-fluid bg-dark text-white text-center py-5">
+    <footer class="container-fluid bg-black text-white text-center py-5">
         <p class="fw-bold">Let's Connect!</p>
         <div class="d-flex justify-content-center align-items-center mb-3">
             <a class="pe-3" href="https://instagram.com"><i class="fa-brands fa-instagram fa-lg"></i></a>
