added My Picture to Img Folder, Finished Intro/About Me - added image, added background to it and styled in CSS, minor About Me Description changes, Header - did Media Queries on CSS so text can fully show and be responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="text-box container-fluid d-flex justify-content-center align-items-center">
                 <h1 class="text-white text-center">
                     TRIXY<br>PARRA<br>
-                    <span class="small-text text-center d-none d-md-block">{ My Journey in Tech }</span>
+                    <span class="small-text text-center">{ My Journey in Tech }</span>
                 </h1>
             </div>
         </div>
@@ -47,15 +47,15 @@
     <!-- Intro -->
     <section class="intro">
         <div class="container">
-            <div class="row">
-                <div class="col col-sm-12">
-                    <img src="" alt="">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-5">
+                    <img src="img/me-bw.jpg" class="img-fluid py-5" alt="Picture of Me">
                 </div>
-                <div class="col col-sm-12">
+                <div class="col-12 col-md-6 offset-md-1 py-md-5">
                     <h2 class="text-center">About Me</h2>
                     <h3>Hi there!</h3>
                     <p>Welcome! <em>Bienvenidos!</em> My name is Trixy Parra and this is my journey in Tech! I recently began exploring this field and let me tell you, it's been an amazing experience so far!</p>
-                    <p>Here, you'll be able to explore this page that shows my progress from the very first project I did to the projects I have finished and/or I am currently working on this present day. Featured projects will showcase what I have learned within web development as it is my current point of focus within this field. So why Tech? Click to know why and get to know me a bit more!</p>
+                    <p>Here, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on in this present day. So why Tech? Click below to know why and get to know me a bit more!</p>
                     <a class="btn btn-outline-info" href="#" role="button">
                         Read More
                     </a> 
