started Featured Projects section, Added mt to Intro/About Me section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
     </header>
 
-    <!-- Intro -->
-    <section class="intro">
+    <!-- Intro / About Me -->
+    <section class="intro mt-5">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-5">
@@ -59,6 +59,29 @@
                     <a class="btn btn-outline-info" href="#" role="button">
                         Read More
                     </a> 
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Featured Projects -->
+    <div class="featured-title bg-black my-5">
+        <h2 class="text-center text-white py-5">Featured Projects</h2>
+    </div>
+    <section class="featured-projects">
+        <div class="container">
+            <div class="row">
+                <div class="col border me-5">
+                    <h4 class="text-center">
+                        My First Project
+                    </h4>
+
+                </div>
+                <div class="col border">
+                    <h4 class="text-center">
+                        Recent Project
+                    </h4>
+
                 </div>
             </div>
         </div>
