--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-transparent fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
             <a href="#" class="nav-brand text-decoration-none text-white">
                 <span>Trixy Parra</span>
@@ -21,10 +21,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-                <a href="#" class="nav-link text-white">Home</a>
-                <a href="#" class="nav-link text-white">About</a>
-                <a href="#" class="nav-link text-white">Projects</a>
-                <a href="#" class="nav-link text-white">Contact</a>
+                <a href="#" class="nav-link text-white">HOME</a>
+                <a href="#" class="nav-link text-white">ABOUT</a>
+                <a href="#" class="nav-link text-white">PROJECTS</a>
+                <a href="#" class="nav-link text-white">CONTACT</a>
             </div>
         </div>
     </nav>
