Started/finished Featured Projects section - added titles, descriptions, icons, buttons, styled in CSS. Actual Pictures are pending. Linked Bootstrap Icons stylesheet link to Head. Changed Intro/About Me button to solid instead of outline.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>MFW Final Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c8e18aa0a2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
-            <a href="#" class="nav-brand text-decoration-none text-white">
+            <a href="index.html" class="nav-brand text-decoration-none text-white">
                 <span>Trixy Parra</span>
             </a>
             <!-- Toggle Button -->
@@ -21,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-                <a href="#" class="nav-link text-white">HOME</a>
+                <a href="index.html" class="nav-link text-white">HOME</a>
                 <a href="about.html" class="nav-link text-white">ABOUT</a>
                 <a href="projects.html" class="nav-link text-white">PROJECTS</a>
                 <a href="contact.html" class="nav-link text-white">CONTACT</a>
@@ -56,7 +57,7 @@
                     <h3>Hi there!</h3>
                     <p>Welcome! <em>Bienvenidos!</em> My name is Trixy Parra and this is my journey in Tech! I recently began exploring this field and let me tell you, it's been an amazing experience so far!</p>
                     <p>Here, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on in this present day. So why Tech? Click below to know why and get to know me a bit more!</p>
-                    <a class="btn btn-outline-info" href="#" role="button">
+                    <a class="btn btn-info" href="#" role="button">
                         Read More
                     </a> 
                 </div>
@@ -65,23 +66,51 @@
     </section>
 
     <!-- Featured Projects -->
+        <!-- Title -->
     <div class="featured-title bg-black my-5">
         <h2 class="text-center text-white py-5">Featured Projects</h2>
     </div>
+        <!-- Projects Featured -->
     <section class="featured-projects">
         <div class="container">
             <div class="row">
-                <div class="col border me-5">
-                    <h4 class="text-center">
-                        My First Project
-                    </h4>
-
+                <div class="col-12 col-md-6 mb-3">
+                    <div class="card border-0">
+                        <div class="card-header bg-white text-center">
+                            <h3><i class="bi bi-stars"></i> My First Project <i class="bi bi-stars"></i></h3>
+                        </div>
+                        <img src="img/black-sand.jpg" class="card-img-top img-fluid img-thumbnail" alt="First Project">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Lifestyle Blog
+                            </h5>
+                            <p class="card-text">
+                                This was the very first project I did. I came up with the concept of a lifestyle blog for this particular project. Choosing the concept, visualizing the layout, and creating it was definitely a fun experience. I really like how it turned out for it being my first project. Click below to take a look.
+                            </p>
+                            <button type="button" class="btn btn-info">
+                                View Project
+                            </button>
+                        </div>
+                    </div>
                 </div>
-                <div class="col border">
-                    <h4 class="text-center">
-                        Recent Project
-                    </h4>
-
+                <div class="col-12 col-md-6 mb-3">
+                    <div class="card border-0">
+                        <div class="card-header bg-white text-center">
+                            <h3><i class="bi bi-stars"></i> Recent Project <i class="bi bi-stars"></i></h3>
+                        </div>
+                        <img src="img/black-sand.jpg" class="card-img-top img-fluid img-thumbnail" alt="Recent Project">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                Parallax Practice
+                            </h5>
+                            <p class="card-text">
+                                This is a recent project I completed. The concept was to show a road trip using parallax. This was the very first time I practiced with parallax. I really enjoyed the concept and style. Definitely one of my favorites! Click below to take a look.
+                            </p>
+                            <button type="button" class="btn btn-info">
+                                View Project
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
