--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                     <img src="img/me-bw.jpg" class="img-fluid py-5" alt="Picture of Me">
                 </div>
                 <div class="col-12 col-md-6 offset-md-1 py-md-5">
-                    <h2 class="text-center">About Me</h2>
+                    <h2 class="text-center">
+                        About <span class="lower-text">Me</span>
+                    </h2>
                     <h3>Hi there!</h3>
                     <p>Welcome! <em>Bienvenidos!</em> My name is Trixy Parra and this is my journey in Tech! I recently began exploring this field and let me tell you, it's been an amazing experience so far!</p>
                     <p>Here, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on in this present day. So why Tech? Click below to know why and get to know me a bit more!</p>
@@ -67,8 +69,10 @@
 
     <!-- Featured Projects -->
         <!-- Title -->
-    <div class="featured-title bg-black my-5">
-        <h2 class="text-center text-white py-5">Featured Projects</h2>
+    <div class="featured-title d-flex justify-content-center align-items-center my-5">
+        <h2 class="text-center text-white">
+            Featured <span class="lower-text">Projects</span>
+        </h2>
     </div>
         <!-- Projects Featured -->
     <section class="featured-projects">
@@ -77,9 +81,9 @@
                 <div class="col-12 col-md-6 mb-3">
                     <div class="card border-0">
                         <div class="card-header bg-white text-center">
-                            <h3><i class="bi bi-stars"></i> My First Project <i class="bi bi-stars"></i></h3>
+                            <h4><i class="bi bi-stars"></i> My First Project <i class="bi bi-stars"></i></h4>
                         </div>
-                        <img src="img/black-sand.jpg" class="card-img-top img-fluid img-thumbnail" alt="First Project">
+                        <img src="img/black-sand.jpg" class="card-img-top img-fluid shadow" alt="First Project">
                         <div class="card-body">
                             <h5 class="card-title">
                                 Lifestyle Blog
@@ -96,9 +100,9 @@
                 <div class="col-12 col-md-6 mb-3">
                     <div class="card border-0">
                         <div class="card-header bg-white text-center">
-                            <h3><i class="bi bi-stars"></i> Recent Project <i class="bi bi-stars"></i></h3>
+                            <h4><i class="bi bi-stars"></i> Recent Project <i class="bi bi-stars"></i></h4>
                         </div>
-                        <img src="img/black-sand.jpg" class="card-img-top img-fluid img-thumbnail" alt="Recent Project">
+                        <img src="img/black-sand.jpg" class="card-img-top img-fluid shadow" alt="Recent Project">
                         <div class="card-body">
                             <h5 class="card-title">
                                 Parallax Practice
