--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,14 @@
     <title>MFW Final Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c8e18aa0a2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
-            <a href="#" class="nav-brand text-decoration-none text-white">
+            <a href="index.html" class="nav-brand text-decoration-none text-white">
                 <span>Trixy Parra</span>
             </a>
             <!-- Toggle Button -->
@@ -21,13 +22,68 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-                <a href="#" class="nav-link text-white">HOME</a>
+                <a href="index.html" class="nav-link text-white">HOME</a>
                 <a href="about.html" class="nav-link text-white">ABOUT</a>
                 <a href="projects.html" class="nav-link text-white">PROJECTS</a>
                 <a href="contact.html" class="nav-link text-white">CONTACT</a>
             </div>
         </div>
     </nav>
+
+    <!-- Contact Form -->
+    <section class="contact-form">
+        <div class="container-lg">
+            <div class="text-center">
+                <h2>Get in Touch</h2>
+            </div>
+            <div class="row justify-content-center my-3">
+                <div class="col-lg-6 px-4 py-3 form-background">
+                    <form>
+                        <label for="firstname" class="form-label text-white">First Name:</label>
+                        <div class="input-group mb-2">
+                            <span class="input-group-text">
+                                <i class="bi bi-person-fill"></i>
+                            </span>
+                            <input type="text" class="form-control" id="firstname" placeholder="Enter First Name here. . ." required>
+                        </div>
+
+                        <label for="lastname" class="form-label text-white">Last Name:</label>
+                        <div class="input-group mb-2">
+                            <span class="input-group-text">
+                                <i class="bi bi-person-fill"></i>
+                            </span>
+                            <input type="text" class="form-control" id="lastname" placeholder="Enter Last Name here. . ." required>
+                        </div>
+
+                        <label for="email" class="form-label text-white">Email:</label>
+                        <div class="input-group mb-2">
+                            <span class="input-group-text">
+                                <i class="bi bi-at"></i>
+                            </span>
+                            <input type="email" class="form-control" id="email" placeholder="Enter Email here. . ." required>
+                        </div>
+
+                        <label for="location" class="form-label text-white">Location:</label>
+                        <div class="input-group mb-2">
+                            <span class="input-group-text">
+                                <i class="bi bi-pin-map-fill"></i>
+                            </span>
+                            <input type="text" class="form-control" id="location" placeholder="City, State, Country and/or Zip Code" required>
+                        </div>
+
+                        <div class="mb-4">
+                            <label for="message" class="form-label text-white">Message:</label>
+                            <textarea class="form-control" id="message" style="height: 140px" placeholder="Enter Your Message here. . ." required></textarea>
+                        </div>
+
+                        <div class="mb-2 text-center">
+                            <button type="submit" class="btn btn-info">SUBMIT</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="container-fluid bg-black text-white text-center py-5">
