--- a/projects.html
+++ b/projects.html
@@ -7,13 +7,14 @@
     <title>MFW Final Project</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/c8e18aa0a2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
-            <a href="#" class="nav-brand text-decoration-none text-white">
+            <a href="index.html" class="nav-brand text-decoration-none text-white">
                 <span>Trixy Parra</span>
             </a>
             <!-- Toggle Button -->
@@ -21,7 +22,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
-                <a href="#" class="nav-link text-white">HOME</a>
+                <a href="index.html" class="nav-link text-white">HOME</a>
                 <a href="about.html" class="nav-link text-white">ABOUT</a>
                 <a href="projects.html" class="nav-link text-white">PROJECTS</a>
                 <a href="contact.html" class="nav-link text-white">CONTACT</a>
