Added Sample Header to all Pages - styled on CSS. Contact Page - margin and padding adjustments, text description changes to h2 element and added p element.

--- a/about.html
+++ b/about.html
@@ -30,6 +30,13 @@
         </div>
     </nav>
 
+    <!-- Header -->
+    <header class="hero-image d-flex justify-content-center align-items-center">
+        <h1 class="display-2 text-white">
+            ABOUT
+        </h1>
+    </header>
+
     <!-- Footer -->
     <footer class="container-fluid bg-black text-white text-center py-5">
         <p class="fw-bold">Let's Connect!</p>
