--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,23 @@
         </div>
     </nav>
 
+    <!-- Header -->
+    <header class="hero-image d-flex justify-content-center align-items-center">
+        <h1 class="display-2 text-white">
+            CONTACT
+        </h1>
+    </header>
+
     <!-- Contact Form -->
-    <section class="contact-form">
+    <section class="contact-form py-3">
         <div class="container-lg">
             <div class="text-center">
-                <h2>Get in Touch</h2>
+                <h2 class="text-white fw-bold my-4">
+                    Get in Touch With Me
+                </h2>
+                <p class="text-white mb-4">
+                    Please fill out the contact form below.
+                </p>
             </div>
             <div class="row justify-content-center my-3">
                 <div class="col-lg-6 px-4 py-3 form-background">
@@ -58,7 +70,7 @@
                         <label for="email" class="form-label text-white">Email:</label>
                         <div class="input-group mb-2">
                             <span class="input-group-text">
-                                <i class="bi bi-at"></i>
+                                <i class="bi bi-envelope-fill"></i>
                             </span>
                             <input type="email" class="form-control" id="email" placeholder="Enter Email here. . ." required>
                         </div>
@@ -71,12 +83,12 @@
                             <input type="text" class="form-control" id="location" placeholder="City, State, Country and/or Zip Code" required>
                         </div>
 
-                        <div class="mb-4">
+                        <div class="mb-3">
                             <label for="message" class="form-label text-white">Message:</label>
                             <textarea class="form-control" id="message" style="height: 140px" placeholder="Enter Your Message here. . ." required></textarea>
                         </div>
 
-                        <div class="mb-2 text-center">
+                        <div class="text-center">
                             <button type="submit" class="btn btn-info">SUBMIT</button>
                         </div>
                     </form>
