Added Projects Page Titles

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     </header>
 
     <!-- Contact Form -->
-    <section class="contact-form py-3">
+    <section class="contact-form pt-4 pb-5">
         <div class="container-lg">
             <div class="text-center">
                 <h2 class="text-white fw-bold my-4">
