--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,26 @@
         </h1>
     </header>
 
+    <!-- Projects -->
+        <!-- W4B -->
+    <div class="w4b-title">
+        <h2 class="text-center">
+            Class: <span class="lower-text">Websites for Beginners</span>
+        </h2>
+    </div>
+    <section class="w4b-project">
+
+    </section>
+        <!-- MFW -->
+    <div class="mfw-title">
+        <h2 class="text-center">
+            Class: <span class="lower-text">Mobile-Friendly Websites</span>
+        </h2>
+    </div>
+    <section class="mfw-projects">
+        
+    </section>
+
     <!-- Footer -->
     <footer class="container-fluid bg-black text-white text-center py-5">
         <p class="fw-bold">Let's Connect!</p>
