Projects Page set up - Gallery, Section Titles

--- a/projects.html
+++ b/projects.html
@@ -39,26 +39,48 @@
 
     <!-- Projects -->
         <!-- W4B -->
-    <div class="w4b-title">
-        <h2 class="text-center">
+    <div class="w4b-title featured-title d-flex justify-content-center align-items-center my-5">
+        <h2 class="text-center text-white">
             Class: <span class="lower-text">Websites for Beginners</span>
         </h2>
     </div>
     <section class="w4b-project">
+        <div class="container">
+            <div class="row justify-content-center my-4">
+                <div class="col-md-4">
+                    <img src="img/black-sand.jpg" class="img-fluid" alt="First Class Final Project">
 
+                </div>
+            </div>
+        </div>
     </section>
         <!-- MFW -->
-    <div class="mfw-title">
-        <h2 class="text-center">
+    <div class="mfw-title featured-title d-flex justify-content-center align-items-center my-5">
+        <h2 class="text-center text-white">
             Class: <span class="lower-text">Mobile-Friendly Websites</span>
         </h2>
     </div>
     <section class="mfw-projects">
-        
+        <div class="container">
+            <div class="row my-4">
+                <div class="col-12 col-md-4">
+                    <img src="img/black-sand.jpg" class="img-fluid mb-3" alt="Second Class Project 1">
+
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/black-sand.jpg" class="img-fluid mb-3" alt="Second Class Project 1">
+
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="img/black-sand.jpg" class="img-fluid" alt="Second Class Project 1">
+
+                </div>
+            </div>
+        </div>        
     </section>
 
     <!-- Footer -->
-    <footer class="container-fluid bg-black text-white text-center py-5">
+    <footer class="container-fluid bg-black text-white text-center py-5 mt-4">
         <p class="fw-bold">Let's Connect!</p>
         <div class="d-flex justify-content-center align-items-center mb-3">
             <a class="pe-3" href="https://instagram.com"><i class="fa-brands fa-instagram fa-lg"></i></a>
