--- a/projects.html
+++ b/projects.html
@@ -46,10 +46,12 @@
     </div>
     <section class="w4b-project">
         <div class="container">
-            <div class="row justify-content-center my-4">
+            <div class="row justify-content-center text-center my-4">
                 <div class="col-md-4">
-                    <img src="img/black-sand.jpg" class="img-fluid" alt="First Class Final Project">
-
+                    <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="First Class Final Project">
+                    <button type="button" class="btn btn-info">
+                        View Project
+                    </button>
                 </div>
             </div>
         </div>
@@ -62,25 +64,31 @@
     </div>
     <section class="mfw-projects">
         <div class="container">
-            <div class="row my-4">
+            <div class="row text-center my-4">
                 <div class="col-12 col-md-4">
-                    <img src="img/black-sand.jpg" class="img-fluid mb-3" alt="Second Class Project 1">
-
+                    <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
+                    <button type="button" class="btn btn-info mb-4">
+                        View Project
+                    </button>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/black-sand.jpg" class="img-fluid mb-3" alt="Second Class Project 1">
-
+                    <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
+                    <button type="button" class="btn btn-info mb-4">
+                        View Project
+                    </button>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/black-sand.jpg" class="img-fluid" alt="Second Class Project 1">
-
+                    <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
+                    <button type="button" class="btn btn-info">
+                        View Project
+                    </button>
                 </div>
             </div>
         </div>        
     </section>
 
     <!-- Footer -->
-    <footer class="container-fluid bg-black text-white text-center py-5 mt-4">
+    <footer class="container-fluid bg-black text-white text-center py-5 mt-5">
         <p class="fw-bold">Let's Connect!</p>
         <div class="d-flex justify-content-center align-items-center mb-3">
             <a class="pe-3" href="https://instagram.com"><i class="fa-brands fa-instagram fa-lg"></i></a>
