Added new Font Styles - linked appropriately, added to specific titles, and further styled on CSS for lower text and query for smaller screens

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
         <!-- W4B -->
     <div class="w4b-title featured-title d-flex justify-content-center align-items-center my-5">
         <h2 class="text-center text-white">
-            Class: <span class="lower-text">Websites for Beginners</span>
+            CLASS:<span class="lower-text query-lower-text">Websites for Beginners</span>
         </h2>
     </div>
     <section class="w4b-project">
@@ -59,7 +59,7 @@
         <!-- MFW -->
     <div class="mfw-title featured-title d-flex justify-content-center align-items-center my-5">
         <h2 class="text-center text-white">
-            Class: <span class="lower-text">Mobile-Friendly Websites</span>
+            CLASS:<span class="lower-text query-lower-text">Mobile-Friendly Websites</span>
         </h2>
     </div>
     <section class="mfw-projects">
@@ -89,7 +89,7 @@
 
     <!-- Footer -->
     <footer class="container-fluid bg-black text-white text-center py-5 mt-5">
-        <p class="fw-bold">Let's Connect!</p>
+        <p>Let's Connect!</p>
         <div class="d-flex justify-content-center align-items-center mb-3">
             <a class="pe-3" href="https://instagram.com"><i class="fa-brands fa-instagram fa-lg"></i></a>
             <a class="pe-3" href="https://twitter.com"><i class="fa-brands fa-twitter fa-lg"></i></a>
@@ -102,7 +102,7 @@
             <a class="footer-links text-white pe-3" href="projects.html">Projects</a></li>
             <a class="footer-links text-white" href="contact.html">Contact</a></li>
           </div>
-        <p class="mb-0">&copy; 2022 | Trixy Parra</p> 
+        <p class="mt-4 mb-0">&copy; 2022 | Trixy Parra</p> 
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
