--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <section class="contact-form pt-4 pb-5">
         <div class="container-lg">
             <div class="text-center">
-                <h2 class="text-white fw-bold my-4">
+                <h2 class="text-white my-4">
                     Get in Touch With Me
                 </h2>
                 <p class="text-white mb-4">
@@ -99,7 +99,7 @@
 
     <!-- Footer -->
     <footer class="container-fluid bg-black text-white text-center py-5">
-        <p class="fw-bold">Let's Connect!</p>
+        <p>Let's Connect!</p>
         <div class="d-flex justify-content-center align-items-center mb-3">
             <a class="pe-3" href="https://instagram.com"><i class="fa-brands fa-instagram fa-lg"></i></a>
             <a class="pe-3" href="https://twitter.com"><i class="fa-brands fa-twitter fa-lg"></i></a>
@@ -112,7 +112,7 @@
             <a class="footer-links text-white pe-3" href="projects.html">Projects</a></li>
             <a class="footer-links text-white" href="contact.html">Contact</a></li>
           </div>
-        <p class="mb-0">&copy; 2022 | Trixy Parra</p> 
+        <p class="mt-4 mb-0">&copy; 2022 | Trixy Parra</p> 
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
