--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="col-12 col-md-6 offset-md-1 py-md-5">
                     <h2 class="text-center">
-                        About <span class="lower-text">Me</span>
+                        ABOUT<span class="lower-text">Me</span>
                     </h2>
                     <h3>Hi there!</h3>
                     <p>Welcome! <em>Bienvenidos!</em> My name is Trixy Parra and this is my journey in Tech! I recently began exploring this field and let me tell you, it's been an amazing experience so far!</p>
@@ -71,7 +71,7 @@
         <!-- Title -->
     <div class="featured-title d-flex justify-content-center align-items-center my-5">
         <h2 class="text-center text-white">
-            Featured <span class="lower-text">Projects</span>
+            FEATURED<span class="lower-text">Projects</span>
         </h2>
     </div>
         <!-- Projects Featured -->
@@ -122,7 +122,7 @@
 
     <!-- Footer -->
     <footer class="container-fluid bg-black text-white text-center py-5">
-        <p class="fw-bold">Let's Connect!</p>
+        <p>Let's Connect!</p>
         <div class="d-flex justify-content-center align-items-center mb-3">
             <a class="pe-3" href="https://instagram.com"><i class="fa-brands fa-instagram fa-lg"></i></a>
             <a class="pe-3" href="https://twitter.com"><i class="fa-brands fa-twitter fa-lg"></i></a>
@@ -130,12 +130,12 @@
             <a href="https://facebook.com"><i class="fa-brands fa-facebook-square fa-lg"></i></a> 
         </div>
         <div class="footer-nav mb-3">
-            <a class="footer-links text-white pe-3" href="index.html">Home</a></li>
-            <a class="footer-links text-white pe-3" href="about.html">About</a></li>
-            <a class="footer-links text-white pe-3" href="projects.html">Projects</a></li>
-            <a class="footer-links text-white" href="contact.html">Contact</a></li>
+            <a class="footer-links text-white pe-3" href="index.html">HOME</a></li>
+            <a class="footer-links text-white pe-3" href="about.html">ABOUT</a></li>
+            <a class="footer-links text-white pe-3" href="projects.html">PROJECTS</a></li>
+            <a class="footer-links text-white" href="contact.html">CONTACT</a></li>
           </div>
-        <p class="mb-0">&copy; 2022 | Trixy Parra</p> 
+        <p class="mt-4 mb-0">&copy; 2022 | Trixy Parra</p> 
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>    
