New Image to Img Folder. Header for About, Projects, and Contact Page - clipped new Image to background of h1 Text, styled in CSS.

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
     <!-- Header -->
     <header class="hero-image d-flex justify-content-center align-items-center">
-        <h1 class="display-2 text-white">
+        <h1 class="h1-background display-2">
             ABOUT
         </h1>
     </header>
