Added new Image to Img Folder. Projects Page changes - added new background Image to the Class Titles, styled in CSS. Deleted unused sample Image and Video from Img and Video folders.

--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
 
     <!-- Projects -->
         <!-- W4B -->
-    <div class="w4b-title featured-title d-flex justify-content-center align-items-center my-5">
+    <div class="class-title d-flex justify-content-center align-items-center my-5">
         <h2 class="text-center text-white">
             CLASS:<span class="lower-text query-lower-text">Websites for Beginners</span>
         </h2>
@@ -57,7 +57,7 @@
         </div>
     </section>
         <!-- MFW -->
-    <div class="mfw-title featured-title d-flex justify-content-center align-items-center my-5">
+    <div class="class-title d-flex justify-content-center align-items-center my-5">
         <h2 class="text-center text-white">
             CLASS:<span class="lower-text query-lower-text">Mobile-Friendly Websites</span>
         </h2>
