Edit made on Home About Me text. Started and finished About Page description - styled on CSS.

--- a/about.html
+++ b/about.html
@@ -37,6 +37,30 @@
         </h1>
     </header>
 
+    <!-- About -->
+    <section class="about my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="about-h2 display-4">Hi there!</h2>
+
+                    <p class="about-text">Welcome! <em>Bienvenidos!</em> My name is Trixy Parra and this is my journey in Tech! I recently began exploring this field and let me tell you, it's been an amazing experience so far!
+                    </p>
+
+                    <p class="about-text">So a bit about myself. I'm a California native. My parents are both from South America, my mom is from Ecuador and my dad is from Colombia. One of my great grandparents is from Brazil and another one is from Spain. Pretty cool, right? I thought so too! I'm the youngest of 5, I have three sisters and one brother. Over the years my family has grown little by little with my niece, nephews, and my siblings' partners. I have a degree in Sociology and I'm currently exploring the field of Tech.
+                    </p>
+
+                    <p class="about-text">So why tech? The pandemic brought a lot of changes to our lives but also the availability of many resources because of it. A lot of workshops, classes, and other resources started being offered online for anyone and for free by different companies, schools, and other organizations. I took advantage of many of these resources and one of the workshops I took was a one-day two hour class of coding. Before this workshop, the only coding experience I had was customizing my Myspace page, the few times I did, when it was a popular form of social media. It was not much but I always thought it was pretty cool to be able to do those customizations. Ever since I took that workshop, I started searching for ways in how I can further explore this field. I was told about Bitwise by a family member and now here I am, taking my second course with them. Currently I'm learning web development and it's been an amazing experience. I'm loving everything I've learned so far and I'm excited to see where this journey goes!
+                    </p>
+
+                    <p class="about-text">Here, in this page, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on this present day. Feel free to reach out and connect. Thanks for stopping by!
+                    </p>
+                    <i class="bi bi-suit-heart-fill d-flex justify-content-center about-heart"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="container-fluid bg-black text-white text-center py-5">
         <p>Let's Connect!</p>
