--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </h2>
                     <h3>Hi there!</h3>
                     <p>Welcome! <em>Bienvenidos!</em> My name is Trixy Parra and this is my journey in Tech! I recently began exploring this field and let me tell you, it's been an amazing experience so far!</p>
-                    <p>Here, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on in this present day. So why Tech? Click below to know why and get to know me a bit more!</p>
+                    <p>Here, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on this present day. So why Tech? Click below to know why and get to know me a bit more!</p>
                     <a class="btn btn-info" href="#" role="button">
                         Read More
                     </a> 
