Added an Intro to the Projects Page.

--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,13 @@
         </h1>
     </header>
 
+    <!-- Intro -->
+    <div class="projects-intro my-5">
+        <p class="text-center fw-bold fs-5 py-5 px-5 mx-5">
+            Welcome to my Projects Page! Here you'll find the courses I have taken and the projects I have completed within them. All links will direct you to each project. Feel free to take a look!
+        </p>
+    </div>
+
     <!-- Projects -->
         <!-- W4B -->
     <div class="class-title d-flex justify-content-center align-items-center my-5">
