Added an Outro to Home Page - customized on CSS. Made all Buttons text Upper Case on all Pages. Minor Text changes on second paragraph of About Page and also on Projects Page Intro.

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
     <!-- Intro -->
     <div class="projects-intro my-5">
         <p class="text-center fw-bold fs-5 py-5 px-5 mx-5">
-            Welcome to my Projects Page! Here you'll find the courses I have taken and the projects I have completed within them. All links will direct you to each project. Feel free to take a look!
+            Welcome to my Projects Page! Here you'll find the courses I have taken and the projects I have completed within them. All links will direct you to each project. Scroll down to take a look!
         </p>
     </div>
 
@@ -57,7 +57,7 @@
                 <div class="col-md-4">
                     <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="First Class Final Project">
                     <button type="button" class="btn btn-info">
-                        View Project
+                        VIEW PROJECT
                     </button>
                 </div>
             </div>
@@ -75,19 +75,19 @@
                 <div class="col-12 col-md-4">
                     <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
                     <button type="button" class="btn btn-info mb-4">
-                        View Project
+                        VIEW PROJECT
                     </button>
                 </div>
                 <div class="col-12 col-md-4">
                     <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
                     <button type="button" class="btn btn-info mb-4">
-                        View Project
+                        VIEW PROJECT
                     </button>
                 </div>
                 <div class="col-12 col-md-4">
                     <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
                     <button type="button" class="btn btn-info">
-                        View Project
+                        VIEW PROJECT
                     </button>
                 </div>
             </div>
