--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,9 @@
                         </div>
 
                         <div class="text-center">
-                            <button type="submit" class="btn btn-info">SUBMIT</button>
+                            <button type="submit" class="btn btn-info">
+                                SUBMIT
+                            </button>
                         </div>
                     </form>
                 </div>
