Added all Project Images to Img Folder - all placed where required on Home Page and Projects Page.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="card-header bg-white text-center">
                             <h4><i class="bi bi-stars"></i> My First Project <i class="bi bi-stars"></i></h4>
                         </div>
-                        <img src="img/black-sand.jpg" class="card-img-top img-fluid shadow" alt="First Project">
+                        <img src="img/w4b-final.png" class="card-img-top img-fluid shadow" alt="First Project">
                         <div class="card-body">
                             <h5 class="card-title">
                                 Lifestyle Blog
@@ -102,7 +102,7 @@
                         <div class="card-header bg-white text-center">
                             <h4><i class="bi bi-stars"></i> Recent Project <i class="bi bi-stars"></i></h4>
                         </div>
-                        <img src="img/black-sand.jpg" class="card-img-top img-fluid shadow" alt="Recent Project">
+                        <img src="img/parallax.png" class="card-img-top img-fluid shadow" alt="Recent Project">
                         <div class="card-body">
                             <h5 class="card-title">
                                 Parallax Practice
