--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="row justify-content-center text-center my-4">
                 <div class="col-md-4">
-                    <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="First Class Final Project">
+                    <img src="img/w4b-final.png" class="projects img-fluid mb-4" alt="First Class Final Project">
                     <button type="button" class="btn btn-info">
                         VIEW PROJECT
                     </button>
@@ -73,19 +73,19 @@
         <div class="container">
             <div class="row text-center my-4">
                 <div class="col-12 col-md-4">
-                    <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
+                    <img src="img/event-page.png" class="projects img-fluid border border-dark mb-4" alt="Second Class Project 1">
                     <button type="button" class="btn btn-info mb-4">
                         VIEW PROJECT
                     </button>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
+                    <img src="img/parallax.png" class="projects img-fluid mb-4" alt="Second Class Project 1">
                     <button type="button" class="btn btn-info mb-4">
                         VIEW PROJECT
                     </button>
                 </div>
                 <div class="col-12 col-md-4">
-                    <img src="img/black-sand.jpg" class="projects img-fluid mb-4" alt="Second Class Project 1">
+                    <img src="img/carousel.png" class="projects img-fluid mb-4" alt="Second Class Project 1">
                     <button type="button" class="btn btn-info">
                         VIEW PROJECT
                     </button>
