Made all Buttons linkable - Buttons that link to site pages are linked, Buttons that link to Project's live pages are pending.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h3>Hi there!</h3>
                     <p>Welcome! <em>Bienvenidos!</em> My name is Trixy Parra and this is my journey in Tech! I recently began exploring this field and let me tell you, it's been an amazing experience so far!</p>
                     <p>Here, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on this present day. So why Tech? Click below to know why and get to know me a bit more!</p>
-                    <a class="btn btn-info" href="#" role="button">
+                    <a class="btn btn-info" href="about.html" role="button">
                         READ MORE
                     </a> 
                 </div>
@@ -91,9 +91,9 @@
                             <p class="card-text">
                                 This was the very first project I did. I came up with the concept of a lifestyle blog for this particular project. Choosing the concept, visualizing the layout, and creating it was definitely a fun experience. I really like how it turned out for it being my first project. Click below to take a look.
                             </p>
-                            <button type="button" class="btn btn-info">
+                            <a class="btn btn-info" href="" role="button">
                                 VIEW PROJECT
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -110,9 +110,9 @@
                             <p class="card-text">
                                 This is a recent project I completed. The concept was to show a road trip using parallax. This was the very first time I practiced with parallax. I really enjoyed the concept and style. Definitely one of my favorites! Click below to take a look.
                             </p>
-                            <button type="button" class="btn btn-info">
+                            <a class="btn btn-info" href="" role="button">
                                 VIEW PROJECT
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -127,9 +127,9 @@
                 <div class="col text-center fw-bold py-5">
                     <p>This journey has been going great so far and I'm excited to see where it goes! What I love about this field is that you're always learning on a daily basis. Whether it's something new or even if you feel like you know something, you end up learning even more about it or learning about it in a different way. There's so much to learn and I'm looking forward to continue learning and exploring this field! In the meantime, keep exploring my journey in Tech by checking out the projects I have worked on so far. Click the button below to explore!
                     </p>
-                    <button type="button" class="btn btn-info mt-3">
+                    <a class="btn btn-info mt-3" href="projects.html" role="button">
                         <i class="bi bi-stars outro-stars"></i> PROJECTS <i class="bi bi-stars outro-stars"></i>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
