--- a/projects.html
+++ b/projects.html
@@ -56,9 +56,9 @@
             <div class="row justify-content-center text-center my-4">
                 <div class="col-md-4">
                     <img src="img/w4b-final.png" class="projects img-fluid mb-4" alt="First Class Final Project">
-                    <button type="button" class="btn btn-info">
+                    <a class="btn btn-info" href="" role="button">
                         VIEW PROJECT
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
@@ -74,21 +74,21 @@
             <div class="row text-center my-4">
                 <div class="col-12 col-md-4">
                     <img src="img/event-page.png" class="projects img-fluid border border-dark mb-4" alt="Second Class Project 1">
-                    <button type="button" class="btn btn-info mb-4">
+                    <a class="btn btn-info mb-4" href="" role="button">
                         VIEW PROJECT
-                    </button>
+                    </a>
                 </div>
                 <div class="col-12 col-md-4">
                     <img src="img/parallax.png" class="projects img-fluid mb-4" alt="Second Class Project 1">
-                    <button type="button" class="btn btn-info mb-4">
+                    <a class="btn btn-info mb-4" href="" role="button">
                         VIEW PROJECT
-                    </button>
+                    </a>
                 </div>
                 <div class="col-12 col-md-4">
                     <img src="img/carousel.png" class="projects img-fluid mb-4" alt="Second Class Project 1">
-                    <button type="button" class="btn btn-info">
+                    <a class="btn btn-info" href="" role="button">
                         VIEW PROJECT
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>        
