edit on last paragraph of About Page

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <p class="about-text">So why tech? The pandemic brought a lot of changes to our lives but also the availability of many resources because of it. A lot of workshops, classes, and other resources started being offered online for anyone and for free by different companies, schools, and other organizations. I took advantage of many of these resources and one of the workshops I took was a one-day two hour class of coding. Before this workshop, the only coding experience I had was customizing my Myspace page, the few times I did, when it was a popular form of social media. It was not much but I always thought it was pretty cool to be able to do those customizations. Ever since I took that workshop, I started searching for ways in how I can further explore this field. I was told about Bitwise by a family member and now here I am, taking my second course with them. Currently I'm learning web development and it's been an amazing experience. I'm loving everything I've learned so far and I'm excited to see where this journey goes!
                     </p>
 
-                    <p class="about-text">Here, in this page, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on this present day. Feel free to reach out and connect. Thanks for stopping by!
+                    <p class="about-text">Here, you'll be able to explore my progress from the very first project I did to the projects I have finished and/or I am currently working on this present day. Feel free to reach out and connect. Thanks for stopping by!
                     </p>
                     <i class="bi bi-suit-heart-fill d-flex justify-content-center about-heart"></i>
                 </div>
