Added Outro Background Image to Img Folder - applied to Home Page Outro and styled in CSS. Styled About Page h2 on CSS.

--- a/about.html
+++ b/about.html
@@ -42,7 +42,9 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h2 class="about-h2 display-4">Hi there!</h2>
+                    <h2 class="about-h2 display-4">
+                        Hi there!
+                    </h2>
 
                     <p class="about-text">Welcome! <em>Bienvenidos!</em> My name is Trixy Parra and this is my journey in Tech! I recently began exploring this field and let me tell you, it's been an amazing experience so far!
                     </p>
