--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
 
     <!-- Outro -->
     <section class="outro">
-        <div class="container my-5">
+        <div class="container mt-5">
             <div class="row">
-                <div class="col text-center fw-bold py-5">
-                    <p>This journey has been going great so far and I'm excited to see where it goes! What I love about this field is that you're always learning on a daily basis. Whether it's something new or even if you feel like you know something, you end up learning even more about it or learning about it in a different way. There's so much to learn and I'm looking forward to continue learning and exploring this field! In the meantime, keep exploring my journey in Tech by checking out the projects I have worked on so far. Click the button below to explore!
+                <div class="col text-center py-5">
+                    <p class="text-white">This journey has been going great so far and I'm excited to see where it goes! What I love about this field is that you're always learning on a daily basis. Whether it's something new or even if you feel like you know something, you end up learning even more about it or learning about it in a different way. There's so much to learn and I'm looking forward to continue learning and exploring this field! In the meantime, keep exploring my journey in Tech by checking out the projects I have worked on so far. Click the button below to explore!
                     </p>
                     <a class="btn btn-info mt-3" href="projects.html" role="button">
                         <i class="bi bi-stars outro-stars"></i> PROJECTS <i class="bi bi-stars outro-stars"></i>
