--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
-            <a href="index.html" class="nav-brand text-decoration-none text-white">
+            <a href="index.html" class="nav-brand text-decoration-none text-white ps-3">
                 <span>Trixy Parra</span>
+                    <!-- <span>Trixy <span class="tags">&#60;</span> X <span class="tags">&#62;</span> Parra</span> -->
             </a>
             <!-- Toggle Button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="toggle-navigation">
