--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
-            <a href="index.html" class="nav-brand text-decoration-none text-white">
+            <a href="index.html" class="nav-brand text-decoration-none text-white ps-3">
                 <span>Trixy Parra</span>
             </a>
             <!-- Toggle Button -->
