Home Page and Projects Page - all Project buttons link to their live project links

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <p class="card-text">
                                 This was the very first project I did. I came up with the concept of a lifestyle blog for this particular project. Choosing the concept, visualizing the layout, and creating it was definitely a fun experience. I really like how it turned out for it being my first project. Click below to take a look.
                             </p>
-                            <a class="btn btn-info" href="" role="button">
+                            <a class="btn btn-info" href="https://trixyparra.github.io/W4B-Final-Project/" role="button">
                                 VIEW PROJECT
                             </a>
                         </div>
@@ -111,7 +111,7 @@
                             <p class="card-text">
                                 This is a recent project I completed. The concept was to show a road trip using parallax. This was the very first time I practiced with parallax. I really enjoyed the concept and style. Definitely one of my favorites! Click below to take a look.
                             </p>
-                            <a class="btn btn-info" href="" role="button">
+                            <a class="btn btn-info" href="https://trixyparra.github.io/parallax-practice/" role="button">
                                 VIEW PROJECT
                             </a>
                         </div>
