--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
             <div class="row justify-content-center text-center my-4">
                 <div class="col-md-4">
                     <img src="img/w4b-final.png" class="projects img-fluid mb-4" alt="First Class Final Project">
-                    <a class="btn btn-info" href="" role="button">
+                    <a class="btn btn-info" href="https://trixyparra.github.io/W4B-Final-Project/" role="button">
                         VIEW PROJECT
                     </a>
                 </div>
@@ -74,19 +74,19 @@
             <div class="row text-center my-4">
                 <div class="col-12 col-md-4">
                     <img src="img/event-page.png" class="projects img-fluid border border-dark mb-4" alt="Second Class Project 1">
-                    <a class="btn btn-info mb-4" href="" role="button">
+                    <a class="btn btn-info mb-4" href="https://trixyparra.github.io/event-landing-page/" role="button">
                         VIEW PROJECT
                     </a>
                 </div>
                 <div class="col-12 col-md-4">
                     <img src="img/parallax.png" class="projects img-fluid mb-4" alt="Second Class Project 1">
-                    <a class="btn btn-info mb-4" href="" role="button">
+                    <a class="btn btn-info mb-4" href="https://trixyparra.github.io/parallax-practice/" role="button">
                         VIEW PROJECT
                     </a>
                 </div>
                 <div class="col-12 col-md-4">
                     <img src="img/carousel.png" class="projects img-fluid mb-4" alt="Second Class Project 1">
-                    <a class="btn btn-info" href="" role="button">
+                    <a class="btn btn-info" href="https://trixyparra.github.io/carousel-practice/" role="button">
                         VIEW PROJECT
                     </a>
                 </div>
