Added more media queries for Home Page and Extra Pages Header Text and all H2 text elements responsiveness. Changed all aquamarine items to aqua - Picture Background and About Page underlined text. Footer Navigation text decoration was switched to double instead of wavy.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <!-- Title -->
     <div class="featured-title d-flex justify-content-center align-items-center my-5">
         <h2 class="text-center text-white">
-            FEATURED<span class="lower-text">Projects</span>
+            FEATURED<span class="lower-text hp-lower-text">Projects</span>
         </h2>
     </div>
         <!-- Projects Featured -->
