--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
                     Please fill out the contact form below.
                 </p>
             </div>
-            <div class="row justify-content-center my-3">
+            <div class="row justify-content-center px-3 my-3">
                 <div class="col-lg-6 px-4 py-3 form-background">
                     <form>
                         <label for="firstname" class="form-label text-white">First Name:</label>
