removed text uppercase on Footer Navigation text

--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
             <a href="https://facebook.com"><i class="fa-brands fa-facebook-square fa-lg"></i></a> 
         </div>
         <div class="footer-nav mb-3">
-            <a class="footer-links text-white pe-3" href="index.html">HOME</a></li>
-            <a class="footer-links text-white pe-3" href="about.html">ABOUT</a></li>
-            <a class="footer-links text-white pe-3" href="projects.html">PROJECTS</a></li>
-            <a class="footer-links text-white" href="contact.html">CONTACT</a></li>
+            <a class="footer-links text-white pe-3" href="index.html">Home</a></li>
+            <a class="footer-links text-white pe-3" href="about.html">About</a></li>
+            <a class="footer-links text-white pe-3" href="projects.html">Projects</a></li>
+            <a class="footer-links text-white" href="contact.html">Contact</a></li>
           </div>
         <p class="mt-4 mb-0">&copy; 2022 | Trixy Parra</p> 
     </footer>
